prevent header getting too large on sm

--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,7 @@ body {
   font-weight: 900;
   font-size: 1.7rem;
 }
-@media (max-width: 1028px) {
+@media (max-width: 1050px) {
   #title .navbar-brand {
     font-size: 1.5rem;
   }
@@ -82,7 +82,27 @@ body {
 } */
 @media (max-width: 620px) {
   #title .navbar-brand {
-    font-size: 0.85rem;
+    font-size: 1.2rem;
+  }
+}
+@media (max-width: 520px) {
+  #title .navbar-brand {
+    font-size: 1.0rem;
+  }
+}
+@media (max-width: 450px) {
+  #title .navbar-brand {
+    font-size: 0.77rem;
+  }
+}
+@media (max-width: 380px) {
+  #title .navbar-brand {
+    font-size: 0.6rem;
+  }
+}
+@media (max-width: 335px) {
+  #title .navbar-brand {
+    font-size: 0.45rem;
   }
 }
 
